--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,5 +1,7 @@
 backend:
-  name: test-repo
+  name: github
+  repo: rfargetton/netlify-cms-test
+
 
 media_folder: static/assets
 public_folder: /assets
