--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "gatsby-transformer-remark": "^2.7.2",
     "netlify-cms-app": "^2.12.8",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-helmet": "^6.0.0"
   },
   "devDependencies": {
     "prettier": "2.0.4"
