--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-helmet": "^6.0.0"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.19.0",
     "prettier": "2.0.4"
   },
   "repository": {
