--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -18,7 +18,7 @@ collections:
         - { name: "date", label: "Date", widget: "datetime" }
         - { name: "featured image", label: "image", widget: "image" }
         - { name: "type", label: "Type", widget: "hidden", default: "blog" }
-        - { name: "tags", labale: "Tags", widget: "list" }
+        - { name: "tags", label: "Tags", widget: "list" }
 
     - name: social
       label: social
