--- a/package.json
+++ b/package.json
@@ -14,18 +14,20 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "gatsby": "^2.20.12",
-    "gatsby-plugin-netlify-cms": "^4.2.3",
-    "gatsby-source-filesystem": "^2.2.3",
-    "gatsby-transformer-remark": "^2.7.2",
-    "netlify-cms-app": "^2.12.8",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0"
+    "gatsby": "^2.21.31",
+    "gatsby-plugin-netlify-cms": "^4.3.2",
+    "gatsby-source-filesystem": "^2.3.3",
+    "gatsby-transformer-remark": "^2.8.8",
+    "lodash": "^4.17.15",
+    "netlify-cms-app": "^2.12.12",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-helmet": "^6.0.0",
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
-    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react": "^7.20.0",
     "prettier": "2.0.4"
   },
   "repository": {
