--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "netlify-cms-app": "^2.12.12",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-feather": "^2.0.8",
     "react-helmet": "^6.0.0",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "typeface-inter": "^3.12.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
