--- a/package.json
+++ b/package.json
@@ -15,11 +15,18 @@
   },
   "dependencies": {
     "gatsby": "^2.22.12",
+    "gatsby-image": "^2.4.6",
     "gatsby-plugin-netlify-cms": "^4.3.3",
+    "gatsby-plugin-sharp": "^2.6.10",
+    "gatsby-remark-images": "^3.3.9",
+    "gatsby-remark-prismjs": "^3.5.3",
+    "gatsby-remark-relative-images": "^0.3.0",
     "gatsby-source-filesystem": "^2.3.8",
     "gatsby-transformer-remark": "^2.8.13",
+    "gatsby-transformer-sharp": "^2.5.4",
     "lodash": "^4.17.15",
     "netlify-cms-app": "^2.12.13",
+    "prismjs": "^1.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.8",
