--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.22.12",
     "gatsby-image": "^2.4.6",
     "gatsby-plugin-netlify-cms": "^4.3.3",
     "gatsby-plugin-sharp": "^2.6.10",
+    "gatsby-plugin-styled-components": "^3.3.3",
     "gatsby-remark-images": "^3.3.9",
     "gatsby-remark-prismjs": "^3.5.3",
     "gatsby-remark-relative-images": "^0.3.0",
@@ -30,7 +32,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.8",
-    "react-helmet": "^6.0.0",
+    "react-helmet": "^6.1.0",
     "styled-components": "^5.1.1",
     "typeface-inter": "^3.12.0"
   },
