--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.7",
+    "formik": "^2.1.4",
     "gatsby": "^2.22.12",
     "gatsby-image": "^2.4.6",
     "gatsby-plugin-netlify-cms": "^4.3.3",
