--- a/package.json
+++ b/package.json
@@ -29,13 +29,15 @@
     "gatsby-transformer-sharp": "^2.5.4",
     "lodash": "^4.17.15",
     "netlify-cms-app": "^2.12.13",
+    "polished": "^3.6.5",
     "prismjs": "^1.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.8",
     "react-helmet": "^6.1.0",
     "styled-components": "^5.1.1",
-    "typeface-inter": "^3.12.0"
+    "typeface-inter": "^3.12.0",
+    "typeface-source-code-pro": "^1.1.3"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
