--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -36,10 +36,11 @@ collections:
       create: true
       fields:
         - { name: "title", label: "Title" }
+        - { name: "date", label: "Date", widget: "date" }
         - { name: "body", label: "Body", widget: "markdown" }
         - { name: "featured image", label: "image", widget: "image", required: false }
-        - { name: "link", label: "Link" }
-        - { name: "repo", label: "Repo" }
+        - { name: "link", label: "Link" required: false }
+        - { name: "repo", label: "Repo" required: false }
         - { name: "type", label: "Type", widget: "hidden", default: "project" }
 
     - name: service
