--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "gatsby": "^2.22.12",
     "gatsby-image": "^2.4.6",
     "gatsby-plugin-netlify-cms": "^4.3.3",
-    "gatsby-plugin-sharp": "^2.6.10",
+    "gatsby-plugin-react-helmet": "^3.3.11",
+    "gatsby-plugin-sharp": "^2.6.36",
     "gatsby-plugin-styled-components": "^3.3.3",
     "gatsby-remark-images": "^3.3.9",
     "gatsby-remark-prismjs": "^3.5.3",
