--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "romaricfargetton.com",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "Personal website for Romaric Fargetton, a front end eveloper, designer and teacher living in Tours, France.",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
